# mnq-backtest

./: .gitignore  AGENT_HANDOFF.md  ANALYSIS_QUICK_REFERENCE.txt  BLUESHIFT_RESEARCH_WORKFLOW.md  CLAUDE_BRIEFING.md  EXECUTION_CHECKLIST_v19.md  EXECUTIVE_SUMMARY.txt  ICT_Combined_v2_8.pine  ICT_DEEP_ANALYSIS_REPORT.md  ICT_DEVELOPMENT_WORKFLOW.md  ICT_PROMOTION_MEMO.md  ICT_RESEARCH.md  ITERATION_19_SUMMARY.md  ITERATION_19_VERIFICATION.md  LIVE_TRADING_SETUP.md  PROJECT_PAUSE_SUMMARY.md  QUANTCONNECT_HISTORY_EXPORT.md  QUANTCONNECT_PROXY_ANALYZER.md  QUANTCONNECT_V25_EXIT_EVALUATOR.md  QUANTCONNECT_WEB_IDE.md  README.md  RESEARCH_HYPOTHESES.txt  SCHEDULED_PROMPT_MULTI_AGENT.md  VERIFICATION_REPORT_ITER19.md  analysis.py  analysis_output.txt  analyze_trades.py  backtest_grid_output.txt  backtest_report.txt  backtest_run_output.txt  baseline_results.json  combined_analysis.json  config.py  daily_session_alignment.py  data_coverage_report.json  experience.json  export_qc_qqq_history_research.py  fetch_data.py  live_trading.example.json  metrics.json  (+38 more)
backup_v12/: run_combined_analysis.py
backup_v13/: config.py  orb.py  run_backtest.py  vwap_reversion.py
backup_v14/: config.py  fetcher.py  run_backtest.py  vwap_reversion.py
backup_v15/: config.py  orb.py  run_combined_analysis.py
backup_v16/: config.py  run_walk_forward.py
backup_v17/: config.py
backup_v18/: config.py  orb.py
backup_v19/: config.py  vwap_reversion.py  vwap_reversion_v19_no_ema_filter.py
backup_v20/: fetcher.py  run_combined_analysis.py  run_walk_forward.py
backup_v21/: config.py  (+1 more)
(+764 files in other folders)
